scripts/src/01-app/05-app5/02-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: g-monitoring-app5-deployment
  namespace: g-monitoring-app5-ns
  labels:
    name: g-monitoring-app5-deployment
    app: g-monitoring-app5-app
    project: g-monitoring-project
spec:
  replicas: 2
  selector:
    matchLabels:
      name: g-monitoring-app5-deployment
      app: g-monitoring-app5-app
      project: g-monitoring-project
  template:
    metadata:
      labels:
        name: g-monitoring-app5-deployment
        app: g-monitoring-app5-app
        project: g-monitoring-project
    spec:
      containers:
        - name: main-container
          image: gandigit/microprofile-food:latest
          imagePullPolicy: Always
          ports:
            - name: my-http-deploy
              containerPort: 8181
              protocol: TCP
            - name: my-https-deploy
              containerPort: 8082
