scripts/src/01-app/05-app5/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: g-monitoring-app5-service
  namespace: g-monitoring-app5-ns
  labels:
    name: g-monitoring-app5-service
    app: g-monitoring-app5-app
    project: g-monitoring-project
spec:
  ports:
    - name: my-http-service
      port: 8181
      targetPort: 8181
  selector:
    name: g-monitoring-app5-deployment
